# Echelon

./: .gitignore  CMakeLists.txt  Echelon.sln  README.md  config.h.in  vcpkg.json
Engine/: CMakeLists.txt
Engine/Include/Core/: Application.h  AssetManager.h  Camera.h  Commons.h  Constants.h  Delegates.h  Physics.h  System.h  TypeDefs.h  Utility.h
Engine/Include/Core/Audio/: AudioBank.h  AudioEvent.h  AudioSystem.h
Engine/Include/Core/IO/: IRenderable.h  Input.h  Renderer.h  Window.h
Engine/Include/Core/Maths/: MathF.h  Rectangle.h  Vector2.h
Engine/Include/Core/Scripting/: Engine.h  EntityInterface.h  IBinder.h  Prefab.h  ScriptCore.h
Engine/Include/Debugging/: DebugDraw.h
Engine/Include/ECS/: Entity.h
Engine/Include/ECS/Components/: Component.h  SpriteRenderer.h  Transform.h
Engine/Include/Editor/: EngineGUI.h  GUIWindow.h
Engine/Include/Editor/Windows/: GUIWindow_EntityInfo.h
Engine/Include/Engine/Audio/: AudioBank.h  AudioEvent.h  AudioSystem.h
Engine/Include/Engine/Core/: Application.h  Camera.h  Engine.h  God.h  IProgram.h  IRenderable.h  Input.h  Physics.h  Renderer.h  Singleton.h  TypeDefs.h  Window.h  World.h
Engine/Include/Engine/Core/ECS/: Entity.h
Engine/Include/Engine/Core/Editor/: EngineGUI.h  GUIWindow.h
Engine/Include/Engine/Core/Interfaces/: IProgram.h  IRenderable.h
Engine/Include/Engine/Core/Maths/: Quaternion.h  Rectangle.h  Vector2.h
Engine/Include/Engine/Core/Scripting/: EntityInterface.h  IBinder.h  Prefab.h  ScriptComponent.h  ScriptCore.h  ScriptUtils.h
Engine/Include/Engine/Core/Systems/: AudioSystem.h  EntityManager.h  Input.h  InputManager.h  LevelManager.h  StateSystem.h
Engine/Include/Engine/Graphics/: Animation.h  AssetManager.h  MapCollisionLayer.h  MapLayer.h  Sprite.h  SpriteSheet.h  Texture2D.h  TileMap.h
Engine/Include/Engine/Graphics/TileMap/: MapLayer.h  ObjectLayer.h  Tile.h  TileMap.h
Engine/Include/Engine/Rendering/: Camera.h  Renderer.h
Engine/Include/Engine/States/: GameState.h  Level.h
Engine/Include/Engine/Systems/: EntityManager.h  InputManager.h  LevelManager.h  StateSystem.h
Engine/Include/Engine/Utility/: Commons.h  Constants.h  DebugDraw.h  Delegates.h  MathF.h  SprHandler.h  Utility.h
Engine/Include/Graphics/: Animation.h  AssetManager.h  Material.h  Particle.h  ParticleEmitter.h  Sprite.h  SpriteMesh.h  SpriteSheet.h  Texture2D.h
Engine/Include/Graphics/TileMap/: MapLayer.h  ObjectLayer.h  Tile.h  TileMap.h
Engine/Include/Main/: Application.h  IProgram.h  Window.h
Engine/Include/Rendering/: Camera.h  IRenderable.h  LightManager.h  Renderable.h  Renderer.h  Shader.h
Engine/Include/Scene/: Level.h  LevelManager.h  Scene.h  World.h
Engine/Include/Scene/Entities/: Entity.h
Engine/Include/Scene/Entities/Components/: Animator.h  Component.h  LightSource.h  ParticleSystem.h  Rigidbody.h  SoundEmitter.h  SpriteRenderer.h  Transform.h
Engine/Include/States/: GameState.h  Level.h
Engine/Include/Systems/: EntityManager.h  InputManager.h  LevelManager.h  StateSystem.h
Engine/Include/Utility/: Commons.h  MathF.h  Utility.h
Engine/Src/Audio/: AudioBank.cpp  AudioEvent.cpp  AudioSystem.cpp
Engine/Src/Core/: Application.cpp  AssetManager.cpp  Camera.cpp  Engine.cpp  God.cpp  IProgram.cpp  Input.cpp  Main.cpp  Physics.cpp  Renderer.cpp  System.cpp  Window.cpp  World.cpp
Engine/Src/Core/Audio/: AudioBank.cpp  AudioEvent.cpp  AudioSystem.cpp
Engine/Src/Core/ECS/: Entity.cpp
Engine/Src/Core/ECS/Components/: Animator.cpp  Component.cpp  Rigidbody.cpp  SoundEmitter.cpp  SpriteRenderer.cpp  Transform.cpp
Engine/Src/Core/Editor/: EngineGUI.cpp  GUIWindow.cpp
Engine/Src/Core/Editor/Windows/: GUIWindow_EntityInfo.cpp  GUIWindow_SprGenerator.cpp
Engine/Src/Core/IO/: Input.cpp  Renderer.cpp  Window.cpp
Engine/Src/Core/Interfaces/: IProgram.cpp
Engine/Src/Core/Scripting/: Engine.cpp  IBinder.cpp  Prefab.cpp  ScriptComponent.cpp  ScriptCore.cpp
Engine/Src/Core/Systems/: AudioSystem.cpp  EntityManager.cpp  Input.cpp  InputManager.cpp  LevelManager.cpp  StateSystem.cpp
Engine/Src/Debugging/: DebugDraw.cpp
Engine/Src/ECS/: Entity.cpp
Engine/Src/ECS/Components/: Component.cpp  SpriteRenderer.cpp  Transform.cpp
Engine/Src/Editor/: EngineGUI.cpp  GUIWindow.cpp
Engine/Src/Editor/Windows/: GUIWindow_EntityInfo.cpp
Engine/Src/Graphics/: AssetManager.cpp  MapCollisionLayer.cpp  MapLayer.cpp  Material.cpp  Particle.cpp  ParticleEmitter.cpp  Sprite.cpp  SpriteMesh.cpp  SpriteSheet.cpp  Texture2D.cpp  TileMap.cpp
Engine/Src/Graphics/TileMap/: MapLayer.cpp  ObjectLayer.cpp  Tile.cpp  TileMap.cpp
Engine/Src/Main/: Application.cpp  IProgram.cpp  Window.cpp
Engine/Src/Rendering/: Camera.cpp  IRenderable.cpp  LightManager.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp
Engine/Src/Scene/: Level.cpp  LevelManager.cpp  Scene.cpp  World.cpp
Engine/Src/Scene/Entities/: Entity.cpp
Engine/Src/Scene/Entities/Components/: Animator.cpp  Component.cpp  LightSource.cpp  ParticleSystem.cpp  Rigidbody.cpp  SoundEmitter.cpp  SpriteRenderer.cpp  Transform.cpp
Engine/Src/States/: GameState.cpp  Level.cpp
Engine/Src/Systems/: EntityManager.cpp  InputManager.cpp  LevelManager.cpp  StateSystem.cpp
Engine/Src/Utility/: DebugDraw.cpp  Utility.cpp
Game/: CMakeLists.txt
Game/Echelon/Include/Entities/: BlankCharacter.h  PlayerCharacter.h
Game/Echelon/Include/Entities/Components/: CameraFollow.h  PlayerController.h
Game/Echelon/Include/Levels/: MainLevel.h
Game/Echelon/Src/: Main.cpp
Game/Echelon/Src/Entities/: BlankCharacter.cpp  PlayerCharacter.cpp
Game/Echelon/Src/Entities/Components/: CameraFollow.cpp  PlayerController.cpp
Game/Echelon/Src/Levels/: MainLevel.cpp
Game/Include/Echelon/Entities/: BlankCharacter.h  PlayerCharacter.h
Game/Include/Echelon/Entities/Components/: CameraFollow.h  (+1 more)
Game/Include/Echelon/Levels/: MainLevel.h
Game/Src/: Main.cpp
Game/Src/Entities/: BlankCharacter.cpp  PlayerCharacter.cpp
Game/Src/Entities/Components/: CameraFollow.cpp  PlayerController.cpp
Game/Src/Entities/Mobs/: Drillbot.cpp  Gunbot.cpp
Game/Src/Levels/: MainLevel.cpp
(+258 files in other folders)
